demasiados nuevos cambios y funciones, mejor leer la documentacion, roadmap, todo y changelog

--- a/.env.example
+++ b/.env.example
@@ -23,20 +23,18 @@ ART_STYLE="Create a cinematic image in a dramatic, high-contrast photographic st
 GOOGLE_SHEET_ID=12roXp7Ds8S0nA_Us2MjdKkAldJYUdTV80A7vcjwR6yI
 SHEET_NAME=Sheet1
 
-# TTS Configuration
-TTS_ENGINE=kokoro  # Options: kokoro, chatterbox
-KOKORO_VOICE=af_bella
-KOKORO_SPEED=1.0
-
-# Chatterbox TTS (if using)
-CHATTERBOX_EXAGGERATION=0.5
-CHATTERBOX_CFG_WEIGHT=0.5
-CHATTERBOX_TEMPERATURE=0.8
-# CHATTERBOX_VOICE_SAMPLE_ID=  # Optional: file_id for voice cloning
-
-# Background Music (optional)
-# BACKGROUND_MUSIC_ID=  # file_id of uploaded music
-# BACKGROUND_MUSIC_VOLUME=0.2
+# ========================================
+# Voice & Music Profiles
+# ========================================
+# Profiles are managed in profiles.yaml - edit that file to configure:
+#   - Voice settings (TTS engine, voice samples, parameters)
+#   - Music playlists (tracks, volume, rotation mode)
+#
+# Optional: Override default profile from profiles.yaml
+# ACTIVE_PROFILE=frank_motivational
+#
+# Optional: Path to profiles configuration
+# PROFILES_PATH=profiles.yaml
 
 # Image Generation
 FLUX_MODEL=black-forest-labs/FLUX.1-schnell-Free
@@ -58,6 +56,3 @@ FFMPEG_CQ=23                     # Quality: 18=best, 28=worst (default: 23)
 FFMPEG_BITRATE=5M                # Target bitrate (5M recommended for Shorts)
 FFMPEG_AUDIO_BITRATE=128k        # Audio bitrate (128k sufficient for Shorts)
 
-# Parallelization
-PARALLEL_IMAGE_GENERATION=true   # Generate all images simultaneously (recommended!)
-MAX_PARALLEL_IMAGES=8            # Max concurrent image generations
