--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "aiolimiter>=1.1.0",
     "click>=8.3.0",
     "google-auth-oauthlib>=1.2.2",
+    "pyyaml>=6.0.3",
 ]
 
 [project.optional-dependencies]
