--- a/channels/wealth_wisdom/profiles.yaml
+++ b/channels/wealth_wisdom/profiles.yaml
@@ -55,7 +55,97 @@ profiles:
           name: "Billionaire Power Theme"
         - path: "D:/Music/tracks/10-26seconds/track-billions-outro.mp3"
           name: "Billions Power Theme"
-      volume: 0.2
+        - path: "D:/Music/tracks/10-26seconds/alone-2-emmit_fenn.wav"
+          name: "Emmit light"
+        - path: "D:/Music/tracks/10-26seconds/track-run_the_jewels.mp3"
+          name: "Run the Jewels"
+        - path: "D:/Music/tracks/10-26seconds/track-thunder.mp3"
+          name: "Tunder"
+        - path: "D:/Music/tracks/10-26seconds/track-simpin.mp3"
+          name: "Simpin"
+        - path: "D:/Music/tracks/10-26seconds/track-revive-thelight.mp3"
+          name: "Revive"
+        - path: "D:/Music/tracks/10-26seconds/track-ls.mp3"
+          name: "Ls"
+        - path: "D:/Music/tracks/10-26seconds/track-justsurrender.mp3"
+          name: "Surrender"
+        - path: "D:/Music/tracks/10-26seconds/track-findingme.mp3"
+          name: "FindingMe"
+        - path: "D:/Music/tracks/10-26seconds/track-eveningland.mp3"
+          name: "EveningLand"
+      volume: 0.1
+      rotation: random
+
+  atlas_professional:
+    name: "Atlas - Young Professional Trader"
+    description: "Strong, confident almost cocky voice for serious finance topics"
+    voice:
+      engine: chatterbox
+      sample_path: "D:/Music/atlas-five-exageration.wav"
+      temperature: 0.7
+      cfg_weight: 0.65
+      exaggeration: 0.55
+    music:
+      playlist:
+        - path: "D:/Music/tracks/10-26seconds/track-billions-intro.mp3"
+          name: "Billionaire Power Theme"
+        - path: "D:/Music/tracks/10-26seconds/track-billions-outro.mp3"
+          name: "Billions Power Theme"
+        - path: "D:/Music/tracks/10-26seconds/alone-2-emmit_fenn.wav"
+          name: "Emmit light"
+        - path: "D:/Music/tracks/10-26seconds/track-run_the_jewels.mp3"
+          name: "Run the Jewels"
+        - path: "D:/Music/tracks/10-26seconds/track-thunder.mp3"
+          name: "Tunder"
+        - path: "D:/Music/tracks/10-26seconds/track-simpin.mp3"
+          name: "Simpin"
+        - path: "D:/Music/tracks/10-26seconds/track-revive-thelight.mp3"
+          name: "Revive"
+        - path: "D:/Music/tracks/10-26seconds/track-ls.mp3"
+          name: "Ls"
+        - path: "D:/Music/tracks/10-26seconds/track-justsurrender.mp3"
+          name: "Surrender"
+        - path: "D:/Music/tracks/10-26seconds/track-findingme.mp3"
+          name: "FindingMe"
+        - path: "D:/Music/tracks/10-26seconds/track-eveningland.mp3"
+          name: "EveningLand"
+      volume: 0.1
+      rotation: random
+
+  oliver_professional:
+    name: "Oliver - Young Professional Trader"
+    description: "Strong, confident almost cocky voice for serious finance topics"
+    voice:
+      engine: chatterbox
+      sample_path: "D:/Music/voces/oliver/olivers-voice.mp3"
+      temperature: 0.7
+      cfg_weight: 0.65
+      exaggeration: 0.55
+    music:
+      playlist:
+        - path: "D:/Music/tracks/10-26seconds/track-billions-intro.mp3"
+          name: "Billionaire Power Theme"
+        - path: "D:/Music/tracks/10-26seconds/track-billions-outro.mp3"
+          name: "Billions Power Theme"
+        - path: "D:/Music/tracks/10-26seconds/alone-2-emmit_fenn.wav"
+          name: "Emmit light"
+        - path: "D:/Music/tracks/10-26seconds/track-run_the_jewels.mp3"
+          name: "Run the Jewels"
+        - path: "D:/Music/tracks/10-26seconds/track-thunder.mp3"
+          name: "Tunder"
+        - path: "D:/Music/tracks/10-26seconds/track-simpin.mp3"
+          name: "Simpin"
+        - path: "D:/Music/tracks/10-26seconds/track-revive-thelight.mp3"
+          name: "Revive"
+        - path: "D:/Music/tracks/10-26seconds/track-ls.mp3"
+          name: "Ls"
+        - path: "D:/Music/tracks/10-26seconds/track-justsurrender.mp3"
+          name: "Surrender"
+        - path: "D:/Music/tracks/10-26seconds/track-findingme.mp3"
+          name: "FindingMe"
+        - path: "D:/Music/tracks/10-26seconds/track-eveningland.mp3"
+          name: "EveningLand"
+      volume: 0.1
       rotation: random
 
   kokoro_neutral:
