--- a/channels/momentum_mindset/profiles.yaml
+++ b/channels/momentum_mindset/profiles.yaml
@@ -16,7 +16,7 @@ profiles:
 
     voice:
       engine: chatterbox
-      sample_path: "D:/Music/voces/brody/brody-loneliness.mp3"
+      sample_path: "D:/Music/voces/atlas/atlas-five-exageration.wav"
       exaggeration: 0.5
       cfg_weight: 0.65
       temperature: 0.7
